--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-toastify": "^9.1.2",
     "uuid": "^9.0.0",
     "yup": "^1.0.2"
   },
